<resources>
    <string name="app_name">Genealogy</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="welcome_timing"> S</string>
    <string name="setting">Setting</string>
    <string name="preface">Preface</string>
    <string name="family_origin">Origin of Family Name</string>
    <string name="family_table">Hereditary Form</string>
    <string name="family_generation">Generation</string>
    <string name="family_cultrue">Family Cultrue</string>
    <string name="family_biography">Biography</string>
    <string name="family_image">Family Image</string>
    <string name="family_hall">Family Hall</string>
    <string name="family_smriti">Smriti</string>
    <string name="family_great_event">Family Great Event</string>
    <string name="family_decision">Family Decision</string>
    <string name="family_business">Family Business</string>
    <string name="family_commonweal">Family Commonweal</string>
    <string name="postscript">Postscript</string>
    <string name="family_merits">Family Merits</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_username">Remember Username</string>
    <string name="login">Login</string>
    <string name="join_the_family">Join the Family</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="loading">Loading...</string>
    <string name="login_failed">Login Failed</string>
    <string name="id_card">ID Card</string>
    <string name="phone_numer">Phone number</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="try_again">Try Again</string>
    <string name="lockpattern_recording_incorrect_too_short">Connect at least 4 points. Please try again.</string>
    <string name="draw_unlock_pattern">Draw unlock pattern</string>
    <string name="draw_pattern_confirm">Draw the pattern again to confirm</string>
    <string name="skip">Skip</string>
    <string name="please_try_again">Please try again</string>
    <string name="load_failed">Load Failed</string>
    <string name="invalid_network">Invalid Network</string>
    <string name="load_no_more">Load No More</string>
    <string name="refreshing">Refreshing</string>
    <string name="type_title">Type Title</string>
    <string name="type_content">Type Content</string>
    <string name="radio">Radio</string>
    <string name="multiselect">Multiselect</string>
    <string name="vote_type">Vote Type</string>
    <string name="end_time">End Time</string>
    <string name="secret_ballot">Secret Ballot</string>
    <string name="view_vote_results">After the end of the vote, you can view the results of the vote</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="logout">Logout</string>
    <string name="set_gesture_lock">Set Gesture Lock</string>
    <string name="check_version">Check Version</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="not_set">Not Set</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="my_tag">My Tag</string>
    <string name="initiate">Initiate</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="degree">Degree</string>
    <string name="birth_date">Date of birth</string>
    <string name="application_amount">Application amount</string>
    <string name="alipay_bankcard">Alipay/Bank card</string>
    <string name="family_situation">Family situation</string>
    <string name="application_type">Application type</string>
    <string name="invitation">Invitation</string>
    <string name="poor_or_overseas_study">Poor/Overseas Study</string>
    <string name="endorse">Endorse(Phone number)</string>
    <string name="application_reasons">Reasons for Application</string>
    <string name="pictrue_data">Pictrue Data</string>
    <string name="reset_password">Reset Password</string>
</resources>
