<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip">

        <ImageView
            android:id="@+id/dialog_title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="3dip"
            android:background="@drawable/ic_category_mark" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="5dip"
            android:layout_toRightOf="@id/dialog_title_image"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="8dip"
        android:layout_marginTop="5dip"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnersShown="true"
            android:calendarViewShown="false"
            android:visibility="gone" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numbersInnerTextColor="@color/primary"
            android:timePickerMode="spinner" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="10dip"
        android:paddingTop="10dip">

        <Button
            android:id="@+id/dialog_button_ok"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dip"
            android:layout_toRightOf="@id/dialog_button_ok"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>